feat: Monitoramento da atualização de cotações.
